<resources>
    <string name="app_name">InWalletSDK</string>
    <string name="auth">인증</string>
    <string name="send">코인전송</string>
    <string name="sendToken">토큰전송</string>
    <string name="sendNFT">NFT전송</string>
    <string name="contractExecute">컨트랙실행</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="request">요청</string>
    <string name="result">결과확인</string>
    <string name="value">value</string>
    <string name="contract">contract</string>
    <string name="tokenId">tokenId</string>
    <string name="abi">abi</string>
    <string name="params">params</string>
    <string name="status">status :</string>
    <string name="address">address :</string>
    <string name="txhash">txhash :</string>
</resources>